feat: node list ordering[random, natural] added (#111)
default order is random when the limit parameter is specified otherwise falls back to natural.
